v1.3.0
Added 2 new cards
Cleaned up the description of glitch cards
Nerfed Exploitive Strike, now adds a Glitch to your draw pile
Nerfed Sci-fi book, no longer gives frost, but max orbs increased to 10
Nerfed Fantasy book, upgrade increases Metallicize instead of Regen
Halved damage reduction of Glitched
Buffed no escape, +50% base damage
Renamed thorn remove to defensive analysis (reina)
Fixed card energy orbs
Cleaned up some code

v1.2.1
Consume Glitch no longer generates in combat
Consume Glitch is now capped at 20 Max HP
Changed the code of Portrait of Markov, it's now even more evil

v1.2.0
Added 3 new cards
Nerfed Throw book by 1 damage

v1.1.0
Added 4 new relics
Portrait of Markov now applies Glitched pre-battle
Fixed Temporary HP keyword
Underped Glitched description

v1.0.1
Added Changelog
Mod now automatically updates
Fixed mod version
Updated mod badge

v1.0.0
Initial Release